fixed #16 white space at the bottom problem

--- a/public/stylesheets/general.css
+++ b/public/stylesheets/general.css
@@ -49,7 +49,7 @@ footer {
     clear: left;
     text-align: center;
     padding-top: 5px;
-    padding-bottom: 5px;
+    padding-bottom: 20px;
     background:rgba(0,0,0, 0.3);
 }
 #left {
